--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/tuts-google-maps/",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#3f51b5",
   "background_color": "#3f51b5"
